--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,66 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="fit_parent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+    <style name="wrap_content">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="fit_width">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="list_view" parent="fit_parent">
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="empty_view" parent="wrap_content">
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:textAppearance">?android:textAppearanceMedium</item>
+    </style>
+
+    <style name="progress_bar" parent="Widget.AppCompat.ProgressBar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="list_item_container" parent="fit_parent">
+        <item name="android:orientation">vertical</item>
+        <item name="android:paddingEnd">@dimen/padding</item>
+        <item name="android:paddingLeft">@dimen/padding</item>
+        <item name="android:paddingRight">@dimen/padding</item>
+        <item name="android:paddingStart">@dimen/padding</item>
+    </style>
+
+    <style name="list_item_textviews_container" parent="fit_width">
+        <item name="android:layout_margin">@dimen/margin</item>
+        <item name="android:minHeight">@dimen/min_item_height</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="text_views">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:maxLines">2</item>
+    </style>
+
+    <style name="book_title" parent="text_views">
+        <item name="android:textColor">@color/textColorBookTitle</item>
+        <item name="android:textSize">@dimen/textTitleSize</item>
+    </style>
+
+    <style name="authors" parent="text_views">
+        <item name="android:textColor">@color/textColorBookAuthors</item>
+        <item name="android:textSize">@dimen/textAuthorSize</item>
+    </style>
+
 </resources>
