--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,6 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        style="@style/progress_bar"
-        />
+        style="@style/progress_bar"/>
 
 </RelativeLayout>
